[package]
name = "matching-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["cors"] }
matching-if = { git = "https://github.com/cuhey3/my-if.git" }
webrtc-if = { git = "https://github.com/cuhey3/my-if.git" }
webrtc-adapter = { git = "https://github.com/cuhey3/my-tokio.git" }
serde_json = "1"
getrandom = "0.4.2"
